[gd_scene load_steps=2 format=3 uid="uid://b8sqoqrw4cou6"]

[ext_resource type="Script" path="res://CharacterComponents/limb.gd" id="1_26gho"]

[node name="limb" type="Area2D"]
collision_layer = 2
script = ExtResource("1_26gho")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
